feat(build): explicitly supply release branch in semantic-release configuration

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -8,4 +8,6 @@ plugins:
         - CHANGELOG.md
         - appmap_swagger.gemspec
         - lib/appmap/swagger/version.rb
-  - '@semantic-release/github'
+  - - '@semantic-release/github'
+    - branches:
+        - main
