fix(build): enable back github plugin

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -10,4 +10,4 @@ plugins:
         - CHANGELOG.md
         - appmap_swagger.gemspec
         - lib/appmap/swagger/version.rb
-  #- '@semantic-release/github'
+  - '@semantic-release/github'
